// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid GridItem builds the style rules for the GridItem with custom align and justify 1`] = `
.c0 {
  display: grid;
  grid-template-columns: repeat(12,1fr);
  grid-template-rows: auto;
  width: auto;
  margin: 40px;
  grid-gap: 40px;
}

.c1 {
  margin: 0;
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
  justify-self: left;
  grid-column: 1 / 13;
  grid-row: auto;
}

.c2 {
  margin: 0;
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
  justify-self: center;
  grid-column: 1 / 13;
  grid-row: auto;
}

.c3 {
  margin: 0;
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
  justify-self: right;
  grid-column: 1 / 13;
  grid-row: auto;
}

@media screen and (max-width:1920px) {
  .c0 {
    grid-gap: 24px;
  }
}

@media screen and (max-width:1259px) {
  .c0 {
    margin: 32px;
  }
}

@media screen and (max-width:959px) {
  .c0 {
    grid-gap: 16px;
    margin: 24px;
  }
}

@media screen and (max-width:599px) {
  .c0 {
    margin: 16px;
  }
}

<div
  className="c0"
  data-component="grid"
>
  <div
    className="c1"
  >
    1
  </div>
  <div
    className="c2"
  >
    1
  </div>
  <div
    className="c3"
  >
    1
  </div>
</div>
`;

exports[`Grid GridItem builds the style rules for the GridItem with responsiveSettings 1`] = `
.c0 {
  display: grid;
  grid-template-columns: repeat(12,1fr);
  grid-template-rows: auto;
  width: auto;
  margin: 40px;
  grid-gap: 40px;
}

.c1 {
  margin: 0;
  grid-column: 1 / 13;
  grid-row: auto;
}

.c2 {
  margin: 0;
  grid-column: 1 / 13;
  grid-row: auto;
}

.c3 {
  margin: 0;
  grid-column: 1 / 13;
  grid-row: auto;
}

@media screen and (max-width:1920px) {
  .c0 {
    grid-gap: 24px;
  }
}

@media screen and (max-width:1259px) {
  .c0 {
    margin: 32px;
  }
}

@media screen and (max-width:959px) {
  .c0 {
    grid-gap: 16px;
    margin: 24px;
  }
}

@media screen and (max-width:599px) {
  .c0 {
    margin: 16px;
  }
}

@media screen and (max-width:1500px) {
  .c1 {
    -webkit-align-self: stretch;
    -ms-flex-item-align: stretch;
    align-self: stretch;
    justify-self: stretch;
    grid-column: 1 / 7;
    grid-row: 1;
  }
}

@media screen and (max-width:1300px) {
  .c1 {
    -webkit-align-self: stretch;
    -ms-flex-item-align: stretch;
    align-self: stretch;
    justify-self: stretch;
    grid-column: 1 / 13;
    grid-row: 1;
  }
}

@media screen and (max-width:900px) {
  .c1 {
    -webkit-align-self: stretch;
    -ms-flex-item-align: stretch;
    align-self: stretch;
    justify-self: stretch;
    grid-column: 1 / 9;
    grid-row: 2;
  }
}

@media screen and (max-width:1500px) {
  .c2 {
    -webkit-align-self: stretch;
    -ms-flex-item-align: stretch;
    align-self: stretch;
    justify-self: stretch;
    grid-column: 7 / 13;
    grid-row: 1;
  }
}

@media screen and (max-width:1300px) {
  .c2 {
    -webkit-align-self: stretch;
    -ms-flex-item-align: stretch;
    align-self: stretch;
    justify-self: stretch;
    grid-column: 1 / 13;
    grid-row: 2;
  }
}

@media screen and (max-width:900px) {
  .c2 {
    -webkit-align-self: stretch;
    -ms-flex-item-align: stretch;
    align-self: stretch;
    justify-self: stretch;
    grid-column: 1 / 9;
    grid-row: 3;
  }
}

@media screen and (max-width:1500px) {
  .c3 {
    -webkit-align-self: stretch;
    -ms-flex-item-align: stretch;
    align-self: stretch;
    justify-self: stretch;
    grid-column: 1 / 13;
    grid-row: 2;
  }
}

@media screen and (max-width:900px) {
  .c3 {
    -webkit-align-self: stretch;
    -ms-flex-item-align: stretch;
    align-self: stretch;
    justify-self: stretch;
    grid-column: 1 / 9;
    grid-row: 1;
  }
}

@media screen and (max-width:1300px) {
  .c3 {
    -webkit-align-self: stretch;
    -ms-flex-item-align: stretch;
    align-self: stretch;
    justify-self: stretch;
    grid-column: 1 / 13;
    grid-row: 3;
  }
}

<div
  className="c0"
  data-component="grid"
>
  <div
    className="c1"
  >
    1
  </div>
  <div
    className="c2"
  >
    2
  </div>
  <div
    className="c3"
  >
    3
  </div>
</div>
`;
